--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>The test header</h1>
     <p>We are using live server to load out website in live with out saving, auto delay saving is enabled</p>
+    <p>The new paragraph is added for testing the branch</p>
 </body>
 </html>
